add button for start game in phone

--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,18 @@ body {
   box-shadow: 0 0 20px white;
   background-color: grey;
 }
+
+
+
+.btn_restar {
+    margin: 25px;
+    display: inline-block;
+    height: 100px;
+    width: 100px;
+    border: 5px solid black;
+    border-radius: 20%;
+  }
+
+  .white{
+    background-color: aliceblue;
+}
